--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>job4j_cinema</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>job4j_cinema Maven Webapp</name>
+  <name>job4j_cinema</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
